# -rust_intel_asm_issue_reproduction

./: Cargo.toml
src/: main.rs  sub_module.rs
sub_crate_test/: Cargo.toml
